- CollectionID support for IdBag on many-to-many. (Patch: Patrick Earl)
- Helper class for assisting in type registration. (Patch: Patrick Earl)
- Optional property generation support. (Patch: Patrick Earl)
- support for double derived classes. (Patch: Patrick Earl)
- Automatic bi-directional property updates (Patch: Patrick Earl)

Preview 4.1

New:
- Optionally generates classes implementing INotifyPropertyChanging.
- Contrib-117: Database and designer column order is not in sync

Fixed:
- Added "Nested" to Common.ARAttributes (Patch: Roberto Paterlini)
- Swapped parameters in new ArgumentNullException (Patch: Roberto Paterlini)
- Changed in-memory code compilation error reporting to give full details of the internal compile process. No more ExceptionCollection's.
- Contrib-118: Activewriter errors in combination with VisualSVN (Patch: Visual SVN Team)
- Changed the temporary file generation to use \obj folder rather than arbitrary locations on the system.

Preview 4

New:
- Added support for Flush for ManyToOneRelation
- Added partial Oracle drag and drop support. (Patch: Yavor Shahpasov)
- Generates metadata about properties to be used in queries (as in ICriterion selectCriterium = Expression.Eq(User.Properties.Name, name); )(Thanks: Rudi van den Belt)
- Contrib-30: Add flag to property to mark it with the DefaultMemberAttribute (or do it by default for primary key fields) (Thanks: Michael Hawksworth)
- Contrib-50: (Revised description) Allow user defined imports to replace generated imports. (Thanks: Michael Hawksworth)
- Contrib-54: Integrate NHibernateQueryGenerator into ActiveWriter (Thanks: Steve Degosserie)
- Contrib-81: Added list relation type. (Patch: Grimace of Despair)
- Moved all to vS2008
- Moved binaries license from "as is" to Apache v2. We don't need DSL Tools redistributables in setup package anymore.

Fixed:
- ManyToOne SourceNotNull is now working propertly
- Incorrectly generates Some pascal case fields as camel case.